--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100%;
-  max-width: 320px;
+  width: 100%;
   box-sizing: border-box;
   padding: 0 16px;
   margin: 0 auto;
