--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -74,6 +74,7 @@
     height: 290px;
     object-fit: cover;
     object-position: center;
+    margin: 0 auto;
 
     @include onTablet {
       position: absolute;
@@ -102,7 +103,9 @@
   &__link {
     display: flex;
     box-sizing: border-box;
-    width: 100%;
+    width: 288px;
+    margin: 0 auto;
+    min-width: max-content;
     height: 56px;
     justify-content: center;
     align-items: center;
@@ -150,6 +153,8 @@
 
     @include onTablet {
       grid-column: 3 / 7;
+      width: 100%;
+      margin: 0;
     }
 
     @include onDesktop {
