--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -26,6 +26,8 @@
   }
 
   &__card {
+    width: 288px;
+    margin: 0 auto;
     grid-column: 1 / -1;
 
     @include onTablet {
